--- a/src/components/image-list/ImageList.css
+++ b/src/components/image-list/ImageList.css
@@ -16,11 +16,11 @@
 
 .list-items-wrapper {
   display: flex;
-    flex-wrap: wrap;
-    border: 1px solid #16a085;
-    border-radius: 10px;
-    overflow: hidden;
-    padding: 10px;
+  flex-wrap: wrap;
+  border: 1px solid #16a085;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 10px;
 }
 
 .img-item-wrapper {
@@ -41,16 +41,28 @@
 }
 
 .image-list-wrapper.list .img-item-wrapper img {
-  width: 15%;
+  height: 100%;
+  width: auto;
 }
 
 .image-list-wrapper.grid .img-item-wrapper {
-  flex: 0 0 25%;
+  flex: 1 1 25%;
 }
 
 .image-list-wrapper .description-area {
   padding: 10px;
   font-size: 1.1rem;
+}
+
+.img-wrapper {
+  width: 117px;
+  height: 117px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid;
+  background: #16a085;
 }
 
 .img-item-wrapper img {
